# videoPlayer

./: .gitignore  CMakeLists.txt  Main.qml  README.md  audioDecoder.cpp  audioDecoder.h  decoder.cpp  decoder.h  decoderBase.h  main.cpp  resources.qrc  videoDecoder.cpp  videoDecoder.h  videoplayer.cpp  videoplayer.h
